--- a/online basic python-checkpoint.ipynb
+++ b/online basic python-checkpoint.ipynb
@@ -818,15 +818,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-50-6d87907f4ad5>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-50-6d87907f4ad5>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    print(a~b)\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "1\n",
+      "16\n",
+      "0\n"
      ]
     }
    ],
@@ -837,8 +840,9 @@
     "print(a & b) #0010\n",
     "print(a|b)   #0011\n",
     "print(a^b)   #0001(diffrent)\n",
-    "print(a<<b)  #1110\n",
-    "print(a>>b) #0000\n"
+    "#a=2 #0000 0010\n",
+    "print(a<<b)  #0001 0000\n",
+    "print(a>>b) #0000 0000"
    ]
   },
   {
